RbA Build/src/objects/Color_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <label>Interior Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oak</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Color Configurations</relationshipLabel>
        <relationshipName>Color_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Color Configuration</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Color Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>